--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^5.2.1",
     "ngx-highlightjs": "6.1.3",
     "ngx-quill": "16.2.0",
+    "ngx-socket-io": "^4.3.1",
     "quill": "^1.3.7",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
