--- a/package.json
+++ b/package.json
@@ -25,12 +25,13 @@
     "quill": "^1.3.7",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~13.2.2",
+    "zone.js": "~0.11.4",
     "@angular/cli": "~13.2.2",
     "@angular/compiler-cli": "~13.2.0",
+    "@angular-devkit/build-angular": "~13.2.2",
+    "typescript": "~4.5.2"
+  },
+  "devDependencies": {
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "@types/quill": "1.3.10",
@@ -40,7 +41,6 @@
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.5.2"
+    "karma-jasmine-html-reporter": "~1.7.0"
   }
 }
