--- a/package.json
+++ b/package.json
@@ -11,32 +11,35 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "~13.2.2",
     "@angular/animations": "~13.2.0",
+    "@angular/cli": "~13.2.2",
     "@angular/common": "~13.2.0",
     "@angular/compiler": "~13.2.0",
+    "@angular/compiler-cli": "~13.2.0",
     "@angular/core": "~13.2.0",
     "@angular/forms": "~13.2.0",
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
     "bootstrap": "^5.2.1",
+    "express": "^4.18.1",
     "ngx-highlightjs": "6.1.3",
     "ngx-quill": "16.2.0",
     "ngx-socket-io": "^4.3.1",
+    "path": "^0.12.7",
     "quill": "^1.3.7",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4",
-    "@angular/cli": "~13.2.2",
-    "@angular/compiler-cli": "~13.2.0",
-    "@angular-devkit/build-angular": "~13.2.2",
-    "typescript": "~4.5.2"
+    "typescript": "~4.5.2",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "@types/quill": "1.3.10",
     "angular-cli-ghpages": "1.0.3",
+    "enhanced-resolve": "^5.10.0",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
@@ -44,5 +47,8 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0"
   },
-  "engine": { "node": "14.x", "npm": "6.x" }
+  "engine": {
+    "node": "14.x",
+    "npm": "6.x"
+  }
 }
